fix alignment on digital page for mobile users

--- a/style/digital.css
+++ b/style/digital.css
@@ -48,12 +48,9 @@ p{
     letter-spacing: 2px;
     margin-bottom: 50px;
 }
-h1{
+h2{
     font-family: impact, sans-serif;
     text-align: center;
     letter-spacing: 3px;
     color: #3b3b3b;
-}
-a{
-    margin-top: 1%;
 }
